--- a/config/database.yml
+++ b/config/database.yml
@@ -6,6 +6,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: <%= ENV['POSTGRES_HOST'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 development:
   <<: *default
@@ -64,5 +67,3 @@ test:
 production:
   <<: *default
   database: railsbaseapp_production
-  username: railsbaseapp
-  password: <%= ENV['RAILSBASEAPP_DATABASE_PASSWORD'] %>
