--- a/env.sample
+++ b/env.sample
@@ -1,3 +1,9 @@
 POSTGRES_HOST=db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=helloworld
+
+# Email
+SMTP_ADDRESS=localhost
+SMTP_PORT=25
+SMTP_USER_NAME=john_appleseed
+SMTP_PASSWORD=foobar123
