Implement Github webhook for deployment

--- a/env.sample
+++ b/env.sample
@@ -8,3 +8,8 @@ SMTP_PORT=25
 SMTP_USER_NAME=john_appleseed
 SMTP_PASSWORD=foobar123
 DEFAULT_SENDER=bla@yihangho.com
+
+# Deployment
+DEPLOY_BRANCH=staging
+REPO_PATH=/root/railsbaseapp
+DEPLOYED_PATH=/root/torquebox/jboss/standalone/deployments/railsbaseapp.yml.deployed
