Setup encryption key

--- a/env.sample
+++ b/env.sample
@@ -9,6 +9,10 @@ SMTP_USER_NAME=john_appleseed
 SMTP_PASSWORD=foobar123
 DEFAULT_SENDER=bla@yihangho.com
 
+# Encryption
+# base64 encode this value
+ENCRYPTION_KEY=ojhHEM4dsRxrX9g6huQfwQ1aoVa9qc0shAwl0uBkJjQ=
+
 # Deployment
 DEPLOY_BRANCH=staging
 REPO_PATH=/root/railsbaseapp
